--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 <script>
+//Check and format the current time
 function startTime() {
     var today=new Date();
     var h=today.getHours();
@@ -14,12 +15,12 @@ function startTime() {
     document.getElementById('txt').innerHTML = h+":"+m+":"+s;
     var t = setTimeout(function(){startTime()},500);
 }
-
+// add zero in front of numbers < 10
 function checkTime(i) {
-    if (i<10) {i = "0" + i};  // add zero in front of numbers < 10
+    if (i<10) {i = "0" + i};  
     return i;
 }
-
+//Check and display if show is live or not
 function areWeLive(h, m, s) {
     if (h>=11 && h<12) {
         document.getElementById('live').innerHTML = "ON AIR!";
@@ -28,16 +29,15 @@ function areWeLive(h, m, s) {
     else {
         document.getElementById('live').innerHTML = "";
         document.getElementById('notLive').innerHTML = "Off Air";
+        document.getElementById('timeLeft').innerHTML ="";
     }
-
-
 }
-
-function countDown(h,m,s) {
-   // var mLeft = 60 - m;
-    //var sLeft = (60 - s);
-    //console.log(mLeft);
-    //document.getElementById('timeLeft').innerHTML = "Time Left: " + mLeft + " : " sLeft;
+//display countdown as show approaches the end
+function countDown(m,s) {
+    var mLeft = 60 - m;  
+    var sLeft = (60 - s);
+    if (sLeft < 10){ sLeft = "0" + sLeft}
+    document.getElementById('timeLeft').innerHTML = "Time Left: " + mLeft + ":" + sLeft;
 }
 
 // function startTimer() {
@@ -57,6 +57,7 @@ function countDown(h,m,s) {
 //         }
 //     }, 1000);
 // }
+
 </script>
 </head>
 
