adjust timer logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="notLive"></div>
 <div id="txt"></div>
 <div id="timeLeft"></div>
-<div id="seg1"></div>
+<div id="seg"></div>
 <div id="break"></div>
 
 </body>
