refactoring the timers (currently broken)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body onload="startTime(); fiveMinTimer();">
+<body onload="startTime(); segmentBlock(1, 2, 3, 4);">
 <div id="live"></div>
 <div id="notLive"></div>
 <div id="txt"></div>
