--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="js/jquery-1.11.1.js"></script>
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body onload="startTime(); segmentBlock(1, 2, 3, 4);">
+<body>
 <div id="live"></div>
 <div id="notLive"></div>
 <div id="txt"></div>
