fix areWeLive fuction

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	</head>
 
 	<body>
+		<!-- http://time.gov/widget/widget.html-->
+
+
+</object>
 		<div id="live"></div>
 		<div id="notLive"></div>
 		<div id="txt"></div>
